--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -10,6 +10,11 @@ jobs:
   CodeQL-Build:
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['javascript']
+
     permissions:
       # required for all workflows
       security-events: write
