--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -29,7 +29,7 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           config-file: ./.github/codeql/codeql-config.yml
-          language: ${{ matrix.language }}
+          languages: ${{ matrix.language }}
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
